# SkyRL

skyrl-sandbox/: README.md  pyproject.toml
skyrl-sandbox/skyrl_sandbox/: __init__.py  __main__.py  app.py  codegen.py  dataset_utils.py  models.py  server.py  training.py
skyrl-sandbox/skyrl_sandbox/specs/: multiply.yaml
skyrl-sandbox/skyrl_sandbox/static/: index.html
skyrl-sandbox/skyrl_sandbox/templates/: env_template.py.jinja2  main_template.py.jinja2  register_env_template.py.jinja2
skyrl-train/skyrl_train/generators/: skyrl_gym_generator.py
